--- a/hobbies.html
+++ b/hobbies.html
@@ -3,7 +3,7 @@
 <head>
 <title>My Hobbies</title>
 <meta charset="utf-8">
-
+<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <h3>Hobbies</h3>
