--- a/index.html
+++ b/index.html
@@ -1,111 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <title>Victoria's Personal Page</title>
-  <meta charset="utf-8">
+<title>Victoria E. Levasseur</title>
+<meta charset="utf-8">
 <link rel="stylesheet" href="css/style.css" />
+<link rel="icon" href="favicon.ico" />
+<link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
 </head>
-
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td>
-          <img src="images/headshot1.png" alt="Victoria's profile photo">
-      </td>
-      <td>
-        <h1>Victoria E. Levasseur</h1>
-        <p>
-          <em>Webmaster and <strong>Web Developer</strong></em>
-        </p>
-        <p>
-          I am currently a student at North Shore Community College Studying Web Design
-        </p>
-      </td>
-    </tr>
-  </table>
+<div class='top-container'>
+  <img class="top-cloud"src="images/cloud.png" alt="cloud-image"/>
+  <h1>I'm Victoria</h1>
+  <p>
+    A <span class="pro">Pro</span>grammer
+  </p>
+  <img class="bottom-cloud"src="images/cloud.png" alt="cloud-image"/>
+  <img src="images/mountain.png" alt="mountain-image"/>
+</div>
+<div class="middle-container">
+  <div class="profile">
+    <img src="images/headshot1.png" alt="Head shot of Victoria Levasseur">
+    <h2>Hello.</h2>
+    <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+  </div>
+  <hr>
+  <div class="skills">
+    <h2>My Skills.</h2>
+    <div class="skill-row">
+      <img class="" src="" alt="">
+      <h3>Lorem & Ipsum</h3>
+      <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+    </div>
+    <div class="skill-row">
+      <img class="" src="" alt="">
+      <h3>Lorem Ipsum Dolor</h3>
+      <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+    </div>
+  </div>
+  <hr>
+  <div class="contact-me">
+    <h2>Get In Touch</h2>
+    <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+    <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+    <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+  </div>
+</div>
 
 
-  <hr />
-  <h3>Education</h3>
-  <ul>
-    <li>North Shore Comunity College</li>
-      <ul>
-        <li>
-          Computer Programming 2017-Present
-        </li>
-        <li>
-          Recovery Coaching August 2018 and November 2018
-        </li>
-      </ul>
-      <li>
-        Salem State University
-      </li>
-        <ul>
-          <li>
-            Bachelors of Science in Biology 1984 to 1992
-          </li>
-        </ul>
-  </ul>
-  <hr />
+<div class="bottom-container">
+  <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+  <a class="footer-link" href="https://twitter.com/">Twitter</a>
+  <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+  <p>© 2019 Victoria Levasseur.</p>
+</div>
 
-  <h3>Work Experience</h3>
-  <table>
-    <tr>
-      <td>
-        2006-2008
-      </td>
-      <td>
-        Seattle Aquarium Visitor Guide
-      </td>
-    </tr>
-    <tr>
-      <td>
-        2000-2003
-      </td>
-      <td>
-        Technical Serviced Specialist Millipore
-      </td>
-    </tr>
-  </table>
-  <hr />
-  <h3>Skills</h3>
-  <table border="1" cellspacing="10">
-    <tr>
-      <td>
-        HTML
-      </td>
-      <td>
-      ⭐⭐⭐⭐⭐
-      </td>
-      <td>
-        PHP/MySQL
-      </td>
-      <td>
-        ⭐⭐⭐⭐
-      </td>
-    </tr>
-    <tr>
-      <td>
-        CSS3
-      </td>
-      <td>
-        ⭐⭐⭐⭐⭐
-      </td>
-      </td>
-
-
-      <td>
-          Java
-        </td>
-        <td>
-        ⭐⭐⭐
-        </td>
-
-  </table>
-  <hr />
-<a href="hobbies.html">My Hobbies</a><br />
-<a href="contact.html">My Contact Information</a>
 </body>
-
 </html>
